Get rid of reeses sodium options